Update print statement from 'Hello' to 'Goodbye'
se liga tiara

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="/Tiaras que transbordam fofura! Pompons macios, toque artesanal e cores apaixonantes- rosé.webp" alt="Tiara Ouro Luxo" loading="lazy">
+                        <img src="https://raw.githubusercontent.com/Markkito-ferreira/mimosdadara/refs/heads/main/Tiaras%20que%20transbordam%20fofura!%20Pompons%20macios%2C%20toque%20artesanal%20e%20cores%20apaixonantes-%20ros%C3%A9.webp" alt="Tiara pêssego" loading="lazy">
                         <span class="product-badge">Premium</span>
                     </div>
                     <div class="product-info">
@@ -551,3 +551,4 @@
     </script>
 </body>
 </html>
+
