Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="/“Porque toda princesa merece um toque de poder e fofura! 🌈✨Xuxinha das Meninas Superpoderosas .webp" alt="Personalizado" loading="lazy">
+                        <img src="https://raw.githubusercontent.com/Markkito-ferreira/mimosdadara/refs/heads/main/%E2%80%9CPorque%20toda%20princesa%20merece%20um%20toque%20de%20poder%20e%20fofura!%20%F0%9F%8C%88%E2%9C%A8Xuxinha%20das%20Meninas%20Superpoderosas%20.webp" alt="Personalizado" loading="lazy">
                         <span class="product-badge">Exclusivo</span>
                     </div>
                     <div class="product-info">
@@ -551,4 +551,5 @@
     </script>
 </body>
 </html>
+
 
