Update greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="/mimos da dara, aracaju 01.webp" alt="Laço Rosa Premium" loading="lazy">
+                        <img src="https://raw.githubusercontent.com/Markkito-ferreira/mimosdadara/refs/heads/main/mimos%20da%20dara%2C%20aracaju%2001.webp" loading="lazy">
                         <span class="product-badge">Destaque</span>
                     </div>
                     <div class="product-info">
@@ -551,5 +551,6 @@
     </script>
 </body>
 </html>
+
 
 
